--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,18 @@
   <groupId>com.myproject</groupId>
   <artifactId>selprac</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+ 
+  <dependencies>
+  
+  <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>4.16.1</version>
+</dependency>
+  
+  </dependencies>
+  
+  
+  
 </project>
